# data-extraction-service

./: Dockerfile  pyproject.toml  system-prompt.md
src/: main.py  models.py
