[project]
name = "data-extraction-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
    "langchain-core==1.2.7",
    "langchain-community==0.4.1",
    "langchain-google-genai==4.2.0",
]
